objects/FLODocs__Change_Log_Ready_To_Insert_Event__e.object
<CustomObject>
    <description>Subscribe to this Platform Event to receive messages about Change Logs that need to be inserted.</description>
    <fields>
        <fullName>FLODocs__Actual_Change_DateTime__c</fullName>
        <description>Date/Time of the actual change to the data or metadata. Not the time the Change Log is created.</description>
        <label>Actual Change DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Overview__c</fullName>
        <description>Description of the change.</description>
        <label>Change Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Modified_ByLookup__c</fullName>
        <description>Id of the User that updated the metadata or data record.</description>
        <label>Modified By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Record_Id__c</fullName>
        <description>For data record changes, Id of the record.</description>
        <label>Data Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Record_Name__c</fullName>
        <description>For data record changes, name of the data record.</description>
        <label>Data Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Record_SObject_API__c</fullName>
        <description>for data record changes, the API name of the SObject</description>
        <label>Data Record SObject API</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Diff_Rich_Summary__c</fullName>
        <description>Not a copy of the Change Log field. Only used to populate default values like &quot;Record created.&quot;</description>
        <label>Diff Summary (Rich Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Diff_Summary__c</fullName>
        <description>Not a copy of the Change Log field. Only used to populate default values like &quot;Record created.&quot;</description>
        <label>Diff Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Customization__c</fullName>
        <description>Id of the FLO_Customization__c record corresponding to this Change Log.</description>
        <label>Customization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Field_Name__c</fullName>
        <description>Name of the field on the Customization that was updated.</description>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Filters__c</fullName>
        <description>Any filters that were applied to the Change Log.</description>
        <label>Filters</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__New_Customization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the customization is new.</description>
        <label>New Customization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__New_Value__c</fullName>
        <description>New value of the metadata or data record.</description>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Old_Value__c</fullName>
        <description>Old value of the metadata or data record.</description>
        <label>Old Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Operation__c</fullName>
        <description>Typically &quot;create&quot;, &quot;edit&quot;, &quot;delete&quot;.</description>
        <label>Operation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Change Log Ready-to-Insert Event</label>
    <pluralLabel>Change Log Ready-to-Insert Events</pluralLabel>
</CustomObject>